# mayday

./: .gitignore  Cargo.toml  Makefile  README.md
assets/: mayday.service
config/: Settings.toml  api_keys
crates/client/: Cargo.toml
crates/client/frontend/: mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs
crates/lib/src/api_keys/: mod.rs
crates/lib/src/entities/: analytic.rs  appstate.rs  mayday.rs  message.rs  mod.rs  register.rs  session.rs  user.rs
crates/lib/src/util/: crypt.rs  mod.rs  session.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/database/: mod.rs
crates/server/src/logger/: mod.rs
crates/server/src/routes/: mod.rs  root.rs
crates/server/src/routes/alert/: mod.rs
crates/server/src/routes/location/: mod.rs
crates/server/src/routes/register/: mod.rs
crates/server/src/routes/session/: mod.rs
crates/server/src/routes/user/: mod.rs
docker/: .env  docker-compose.yaml
docker/app/: Dockerfile
docker/db/: Dockerfile
docker/frontend/: Dockerfile
docker/frontend/dev/: Dockerfile
frontend/: dev-container.sh  start-container.sh
frontend/src/app/: layout.jsx  not-found.jsx
frontend/src/app/(auth)/login/: page.jsx
frontend/src/app/(auth)/register/: page.jsx
frontend/src/components/: Footer.jsx  Header.jsx  Hero.jsx
kube/: db-deployment.yaml  db-service.yaml  env-configmap.yaml  mayday-backend-deployment.yaml  mayday-db-deployment.yaml  mayday-db-service.yaml  mayday-deployment.yaml  mayday-frontend-deployment.yaml  mayday-service.yaml  mayday.yaml  mayday_backend-service.yaml  mayday_frontend-service.yaml  namespace.yaml  start-docker.sh
migration/: Cargo.toml
migration/src/: alert_create_table.rs  alertconfig_create_table.rs  integration_create_table.rs  lib.rs  location_create_table.rs  locationdata_create_table.rs  session_create_table.rs  trackingstatus_create_table.rs  user_create_table.rs
plan/: additional.md  anti-stalker-features.md  file_structure.md  names.md  names2.md  nearby.md  react_native_tailwind.md  rust_database_structure.md  structure.md  visuals.md
scripts/: build.sh  importk3s.sh  install-node.sh  remove_stuck_namespaces.sh  run.sh  start_dev_docker.sh  start_docker.sh
