[package]
name = "maydaylib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
anyhow = "1.0.91"
base64 = "0.21.7"
config = "0.14.1"
discord-webhook-lib = "0.1.7"
futures-util = "0.3.31"
lettre = "0.11.10"
magic-crypt = "3.1.13"
rand = "0.8.5"
sea-orm = "1.1.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
sqlx = "0.8.2"
tokio = "1.41.0"